# backpack-battle-bench

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
catalogs/: benchmark-items-v1.yaml
configs/: generator.core.yaml  models.example.yaml  run.all.yaml  run.example.yaml  run.ladder-v2.yaml  run.ladder.yaml  run.visual-ladder.yaml  run.visual-smoke.yaml
docs/: ladder-v1.md  ladder-v2.md  plugin-api.md
leaderboard/: README.md  results.json
leaderboard/runs/: 20260712T161255Z_d61cf121f1_592259.json  20260713T015552Z_fe32639795_fbd188.json  20260713T015823Z_2a5b793d4b_dd5f26.json  20260713T021604Z_56e0f53487_870faa.json  20260713T031540Z_ea0ec5bd18_41acae.json  20260713T031906Z_9b3ed5967d_16c9e0.json  20260713T031939Z_73a8ceb442_8552cb.json  20260713T083400Z_2a95b29843_f13ed9.json  20260713T100938Z_edec163cc7_ad4ca4.json  20260713T134624Z_d9403ed2ee_c28f95.json  20260713T134707Z_d9403ed2ee_99065a.json  20260713T135139Z_2509b0ad8d_6749a6.json  (+40 more)
schemas/: answer.schema.json  generator.schema.json  item-catalog.schema.json  models.schema.json  run.schema.json  scenario.schema.json  suite.schema.json  visual-pack.schema.json
scripts/: publish-leaderboard.ps1  publish-leaderboard.sh
suites/: core-v1.yaml  ladder-v1.yaml  ladder-v2.yaml  smoke-v1.yaml
tests/: conftest.py  test_evaluation.py  test_geometry.py  test_ladder_suite.py  test_no_secrets.py  test_oracle_generator_suite.py  test_providers.py  test_runner_integration.py  test_schemas.py  test_static_site.py  test_storage.py  test_web.py
(+74 files in other folders)
