[project]
name = "backpack-battle-bench"
version = "1.0.0"
description = "Text-only 2D backpack layout benchmark and validator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "pydantic>=2.11,<3",
    "pyyaml>=6,<7",
    "python-dotenv>=1.0,<2",
    "rich>=13,<15",
    "typer>=0.16,<1",
    "uvicorn>=0.34,<1",
]

[project.scripts]
bbbench = "backpack_bench.cli:app"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backpack_bench"]

[tool.hatch.build]
exclude = [
    "/.bbbench",
    "/.env",
    "/runs",
    "/third_party_api_inventory.md",
]

[dependency-groups]
dev = [
    "mypy>=1.16,<2",
    "pytest>=8.4,<9",
    "pytest-cov>=6.2,<8",
    "ruff>=0.12,<1",
    "types-pyyaml>=6.0.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["backpack_bench"]
